--- a/Projeto/Backend/package.json
+++ b/Projeto/Backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "servidor",
-  "version": "1.2.2",
+  "version": "2.0.0",
   "description": "Bit Stich",
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "http",
@@ -18,8 +18,5 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.8"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.1"
   }
 }
